--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/aknd/schemulous/issues"
   },
-  "homepage": "https://github.com/rebirthive/schemulous"
+  "homepage": "https://github.com/rebirthive/schemulous",
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  }
 }
