--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "schemulous",
   "version": "0.1.0",
   "description": "A robust and flexible schema definition and validation library for TypeScript, designed to seamlessly integrate with OpenAPI specifications.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +23,12 @@
   "bugs": {
     "url": "https://github.com/aknd/schemulous/issues"
   },
-  "homepage": "https://github.com/rebirthive/schemulous",
+  "homepage": "https://github.com/aknd/schemulous",
   "devDependencies": {
     "typescript": "^5.2.2"
-  }
+  },
+  "files": [
+    "dist",
+    "src"
+  ]
 }
