--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   },
   "homepage": "https://github.com/aknd/schemulous",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "files": [
