Fix TypeScript import issue in schema-extensions.tsCo-authored-by: (Author Name)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,10 @@
       "ignoreMemberSort": false,
       "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
     }],
+    "@typescript-eslint/consistent-type-imports": ["error", {
+      "prefer": "type-imports",
+      "disallowTypeAnnotations": true
+    }],
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
   },
   "overrides": [
