Refactor code to use consistent import orderCo-authored-by: Jane Smith <janesmith@example.com>

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
-    "lint": "eslint ./src/**/*.ts",
-    "lint:fix": "eslint ./src/**/*.ts --fix",
+    "lint": "eslint ./src/*.ts ./src/**/*.ts",
+    "lint:fix": "eslint ./src/*.ts ./src/**/*.ts --fix",
     "type-check": "tsc -p . --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
