--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src/*.ts ./src/**/*.ts",
     "lint:fix": "eslint ./src/*.ts ./src/**/*.ts --fix",
     "type-check": "tsc -p . --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --run"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,6 @@
   ],
   "author": "Akihiro Kondo",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/aknd/schemulous/issues"
-  },
   "homepage": "https://github.com/aknd/schemulous",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -35,7 +32,8 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   },
   "files": [
     "dist",
