--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p .",
-    "lint": "eslint ./src/*.ts ./src/**/*.ts",
-    "lint:fix": "eslint ./src/*.ts ./src/**/*.ts --fix",
+    "lint": "eslint ./src/*.ts ./src/**/*.ts __tests__/*.ts __tests__/**/*.ts",
+    "lint:fix": "eslint ./src/*.ts ./src/**/*.ts __tests__/*.ts __tests__/**/*.ts --fix",
     "type-check": "tsc -p . --noEmit",
     "test": "vitest --run"
   },
