--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "schemulous",
   "version": "0.3.0",
   "description": "A robust and flexible schema definition and validation library for TypeScript, designed to seamlessly integrate with OpenAPI specifications.",
-  "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p .",
-    "lint": "eslint ./src/*.ts ./src/**/*.ts __tests__/*.ts __tests__/**/*.ts",
-    "lint:fix": "eslint ./src/*.ts ./src/**/*.ts __tests__/*.ts __tests__/**/*.ts --fix",
-    "type-check": "tsc -p type-check.config.json --noEmit",
+    "lint": "eslint ./src/*.ts ./src/**/*.ts ./__tests__/*.ts ./__tests__/**/*.ts",
+    "lint:fix": "eslint ./src/*.ts ./src/**/*.ts ./__tests__/*.ts ./__tests__/**/*.ts --fix",
+    "clean": "rm -rf ./dist/*",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p ./tsconfig.cjs.json",
+    "build:esm": "rollup -c ./rollup.config.mjs",
+    "type-check": "tsc -p ./type-check.config.json --noEmit",
     "test": "vitest --run"
   },
   "repository": {
@@ -26,6 +29,7 @@
   "license": "MIT",
   "homepage": "https://github.com/aknd/schemulous",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
@@ -33,6 +37,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
+    "rollup": "^3.29.1",
     "typescript": "^5.2.2",
     "vitest": "^0.34.4"
   },
