--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,6 +1,6 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "commonjs"
   }
 }
