--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,6 +1,6 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declaration": false,
+    "declaration": false
   }
 }
