--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "import": "./dist/extensions/index.mjs",
       "require": "./dist/extensions/index.js",
       "types": "./dist/extensions/index.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "eslint ./src/*.ts ./src/**/*.ts ./__tests__/*.ts ./__tests__/**/*.ts",
